# iiba-kosodate-passport-scraper

./: .dockerignore  .env.development  .env.example  .flake8  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  check_firestore.py  check_progress.py  clear_firestore.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_osaka.py
.claude/: README.md
.claude/skills/: add-prefecture.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
docs/: ADD_PREFECTURE_EXAMPLE.md  DEPLOYMENT.md  GITHUB_SECRETS_SETUP.md  LOCAL_DEVELOPMENT.md  PYCHARM_SETUP.md  details.md
legacy/: cookies.txt  kidsclub_scrape.py  test_html_structure.py
scripts/: run_scraping.py  setup_cloud_scheduler.sh  setup_github_secrets.sh  verify_dry_run.py
src/: entrypoint.py  server.py
src/features/batch/: orchestrator.py
src/features/batch/jobs/: prefecture_scraping_job.py
src/features/geocoding/domain/: models.py
src/features/geocoding/providers/: cache_geocoder.py  google_maps_geocoder.py
src/features/geocoding/services/: geocoding_service.py
src/features/notifications/domain/: models.py
src/features/notifications/providers/: slack_notifier.py
src/features/scraping/config/prefectures/: aichi.yaml  hyogo.yaml  ibaraki.yaml  kyoto.yaml  nara.yaml  osaka.yaml  shiga.yaml  tokyo.yaml  wakayama.yaml
src/features/scraping/domain/: enums.py  models.py
src/features/scraping/parsers/: base.py
src/features/scraping/parsers/prefectures/: aichi_parser.py  hyogo_parser.py  ibaraki_parser.py  kyoto_parser.py  nara_parser.py  osaka_parser.py  shiga_parser.py  tokyo_csv_parser.py  tokyo_parser.py  wakayama_parser.py
src/features/scraping/scrapers/: base.py
src/features/scraping/scrapers/prefectures/: aichi.py  hyogo.py  ibaraki.py  kyoto.py  nara.py  (+5 more)
src/features/storage/clients/: firestore_client.py
src/features/storage/repositories/: history_repository.py  progress_repository.py  shop_repository.py
src/infrastructure/config/: settings.py
src/infrastructure/gcp/: secret_manager.py
src/shared/exceptions/: errors.py
src/shared/http/: client.py  rate_limiter.py
src/shared/logging/: config.py
src/shared/utils/: datetime_utils.py  text.py
tests/unit/: test_example.py
